@@ -1,28 +1,19 @@
 package jisa.control;
 
-import jisa.addresses.StrAddress;
-import jisa.gui.Connector;
-import jisa.gui.Field;
-import jisa.gui.Fields;
 import jisa.Util;
-import org.json.JSONArray;
 import org.json.JSONObject;
 
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Iterator;
 
 public class ConfigStore {
 
-    private JSONObject json        = null;
-    private JSONObject data        = null;
-    private JSONObject instruments = null;
-    private JSONObject instConfigs = null;
-    private JSONObject fields      = null;
+    private JSONObject json = null;
+    private JSONObject gui  = null;
+    private JSONObject data = null;
     private String     path;
 
     public ConfigStore(String name) throws IOException {
@@ -34,96 +25,74 @@ public class ConfigStore {
         }
 
         if (Files.exists(Paths.get(path))) {
-            String raw = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
+            String raw = Files.readString(Paths.get(path));
             try {
-                json        = new JSONObject(raw);
-                data        = json.getJSONObject("data");
-                instruments = json.getJSONObject("instruments");
-                instConfigs = json.getJSONObject("instConfigs");
-                fields      = json.getJSONObject("fields");
+                json = new JSONObject(raw);
+                gui  = json.getJSONObject("gui");
+                data = json.getJSONObject("data");
             } catch (Exception e) {
+
                 if (json == null) {
                     json = new JSONObject();
                 }
-                if (data == null) {
-                    data = new JSONObject();
-                    json.put("data", data);
-                }
-                if (instruments == null) {
-                    instruments = new JSONObject();
-                    json.put("instruments", instruments);
-                }
-                if (instConfigs == null) {
-                    instConfigs = new JSONObject();
-                    json.put("instConfigs", instruments);
+
+                if (gui == null) {
+                    gui = new JSONObject();
                 }
 
-                fields = new JSONObject();
-                json.put("fields", fields);
+                data = new JSONObject();
+                json.put("gui", gui);
+                json.put("data", data);
 
                 save();
 
             }
         } else {
-            json        = new JSONObject();
-            data        = new JSONObject();
-            instruments = new JSONObject();
-            instConfigs = new JSONObject();
-            fields      = new JSONObject();
+            json = new JSONObject();
+            gui  = new JSONObject();
+            data = new JSONObject();
             json.put("name", name);
             json.put("lastSave", System.currentTimeMillis());
+            json.put("gui", gui);
             json.put("data", data);
-            json.put("instruments", instruments);
-            json.put("instConfigs", instConfigs);
-            json.put("fields", fields);
-
             save();
         }
 
     }
 
     public int getLastSave() {
-
         return json.getInt("lastSave");
     }
 
     public int getInt(String key) {
-
         return data.getInt(key);
     }
 
     public int getIntOrDefault(String key, int def) {
-
         return has(key) ? getInt(key) : def;
     }
 
     public double getDouble(String key) {
-
         return data.getDouble(key);
     }
 
     public double getDoubleOrDefault(String key, double def) {
-
         return has(key) ? getDouble(key) : def;
     }
 
     public boolean getBoolean(String key) {
-
         return data.getBoolean(key);
     }
 
     public boolean getBooleanOrDefault(String key, boolean def) {
-
         return has(key) ? getBoolean(key) : def;
     }
 
     public String getString(String key) {
-
         return data.getString(key);
     }
 
     public String getStringOrDefault(String key, String def) {
-
         return has(key) ? getString(key) : def;
     }
 
@@ -131,6 +100,7 @@ public class ConfigStore {
 
         data.put(key, value);
         save();
+
     }
 
     public void save() throws IOException {
@@ -139,6 +109,7 @@ public class ConfigStore {
         FileWriter writer = new FileWriter(path);
         json.write(writer, 4, 0);
         writer.close();
+
     }
 
     public boolean has(String key) {
@@ -146,94 +117,78 @@ public class ConfigStore {
         return data.has(key);
     }
 
-    public void saveInstrument(String key, Connector config) {
+    public JSONObject getGUIConfigs(Class<?> guiClass) {
 
-        JSONObject output = new JSONObject();
-        output.put("address", config.getAddress() == null ? "null" : config.getAddress().toString());
-        output.put("driver", config.getDriver() == null ? "null" : config.getDriver().getName());
-        instruments.put(key, output);
         try {
-            save();
+            if (gui.has(guiClass.getName())) {
+                return gui.getJSONObject(guiClass.getName());
+            } else {
+                JSONObject object = new JSONObject();
+                gui.put(guiClass.getName(), object);
+                save();
+                return object;
+            }
         } catch (IOException e) {
             Util.errLog.println(e.getMessage());
-        }
-    }
-
-    public void loadInstrument(String key, Connector config) {
-
-        try {
-            JSONObject input = instruments.getJSONObject(key);
-            config.setAddress(new StrAddress(input.getString("address")));
-            config.setDriver(Class.forName(input.getString("driver")));
-        } catch (Exception e) {
-            Util.errLog.println(e.getCause() == null ? e.getMessage() : e.getCause().getMessage());
+            return new JSONObject();
         }
 
     }
 
-    public void saveInstConfig(String key, JSONObject data) throws IOException {
+//    public void saveFields(String name, Fields toSave) throws IOException {
+//
+//        JSONArray block = new JSONArray();
+//        fields.put(name, block);
+//
+//        for (Field f : toSave) {
+//            block.put(f.get());
+//        }
+//
+//        save();
+//
+//    }
+//
+//    public void loadFields(String name, Fields toLoad) {
+//
+//        if (!fields.has(name)) {
+//            return;
+//        }
+//
+//        JSONArray array = fields.getJSONArray(name);
+//
+//        Iterator<Object> objects = array.iterator();
+//        Iterator<Field>  fields  = toLoad.iterator();
+//
+//        while (objects.hasNext() && fields.hasNext()) {
+//
+//            Object o = objects.next();
+//            Field  f = fields.next();
+//
+//            try {
+//
+//                if (f.get() instanceof Double && o instanceof Integer) {
+//                    f.set(((Integer) o).doubleValue());
+//                } else {
+//                    f.set(o);
+//                }
+//
+//            } catch (Throwable ignored) {
+//            }
+//
+//        }
+//
+//    }
 
-        instConfigs.put(key, data);
-        save();
-    }
+    public class SubStore {
 
-    public JSONObject getInstConfig(String key) {
+        private final JSONObject root;
 
-        if (instConfigs.has(key)) {
-            return instConfigs.getJSONObject(key);
-        } else {
-            return null;
+        public SubStore(JSONObject root) {
+            this.root = root;
         }
 
-    }
 
-    public void saveFields(String name, Fields toSave) throws IOException {
 
-        JSONArray block = new JSONArray();
-        fields.put(name, block);
-
-        for (Field f : toSave) {
-            block.put(f.get());
-        }
-
-        save();
-
-    }
-
-    public void loadFields(String name, Fields toLoad) {
-
-        if (!fields.has(name)) {
-            return;
-        }
-
-        JSONArray array = fields.getJSONArray(name);
-
-        Iterator<Object> objects = array.iterator();
-        Iterator<Field>  fields  = toLoad.iterator();
-
-        while (objects.hasNext() && fields.hasNext()) {
-
-            Object o = objects.next();
-            Field  f = fields.next();
-
-            try {
-
-                if (f.get() instanceof Double && o instanceof Integer) {
-                    f.set(((Integer) o).doubleValue());
-                } else {
-                    f.set(o);
-                }
-
-            } catch (Throwable ignored) {
-            }
-
-        }
-
-    }
-
-    public boolean hasInstConfig(String key) {
-
-        return instConfigs.has(key);
     }
 
 }
